constraints-draft/psp-host-namespace.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureBlockHostNamespace
metadata:
  name: psp-host-namespace
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
