constraints-draft/psp-readonly-root-filesystem.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureReadOnlyRootFilesystem
metadata:
  name: psp-readonly-root-filesystem
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
